--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "file-type": "^16.5.3",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "mime-types": "^2.1.35",
     "moment": "^2.30.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.12.0",
     "sequelize": "^6.37.3"
   }
