--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,11 @@ services:
     restart: always
     env_file:
       - .env.db
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6380:6379"      
   nginx:
     build:
       context: ./nginx/
